--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>React App</title>
   </head>
   <body>
+    <body style="margin: 0; height: 100%; background-color: #99f8f3;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
